--- a/management/templates/member_profile.html
+++ b/management/templates/member_profile.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="leader-profile-edit-field-div">
                         <select class="edit-leader-field"
-                                name="leader-profile-edit-sitio" id="leader-profile-edit-sitio-dropdown">
+                                name="member-edit-sitio" id="leader-profile-edit-sitio-dropdown">
                             {% for sitio in sitios %}
                                 <option value="{{ sitio.id }}">{{ sitio.name }}</option>
                             {% empty %}
