--- a/management/static/leader-profile.css
+++ b/management/static/leader-profile.css
@@ -93,13 +93,17 @@
 .leader-profile-member{
     margin: 10px;
     width: 43%;
-    height: 45%;
+    height: 60%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-align: center;
     border-radius: 10px;
     display: inline-block;
     vertical-align: top;
     border: 1px solid rgb(100, 140, 140);
+}
+
+.leader-profile-member-name-container-div{
+    height: 60px;
 }
 
 .leader-profile-member-image-photo{
@@ -311,7 +315,10 @@
 
 .leader-profile-edit-form-container-div{
     padding: 10px;
+}
 
+.leader-profile-search-unassociated-member-form{
+    margin-top: 10px;
 }
 
 .show-leader-edit-form{
@@ -368,4 +375,119 @@
 
 #leader-profile-edit-form-header-title-right{
     float: right;
+}
+
+.leader-profile-unassociated-members-block-div{
+    margin: auto;
+    text-align: center;
+    width: 80%;
+    margin-top: 45px;
+    border: 1px solid rgb(100, 100, 100);
+    border-radius: 20px;
+}
+
+.leader-profile-unassociated-members-title-header{
+    background-color: rgb(10, 40, 40);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    color: beige;
+    font-family: 'Montserrat';
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.leader-profile-unassociated-members-container{
+    overflow-y: scroll;
+    height: 400px;
+
+}
+
+.leader-profile-unassociated-members-profile-image-container-div{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.leader-profile-unassociated-members-profile-image{
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
+
+.leader-profile-unassociated-member-div{
+    display: inline-block;
+    width: 170px;
+    height: 230px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    vertical-align: top;
+    margin: 10px;
+    border: 1px solid rgb(40, 80, 80);
+}
+
+.leader-profile-unassociated-member-details-container{
+    text-align: center;
+    font-family: 'Montserrat';
+}
+
+.leader-profile-unassociated-member-name-div{
+    height: 50px;
+}
+
+.leader-profile-add-member-btn-container-div{
+    margin-top: 20px;
+}
+
+.leader-profile-associate-member-btn{
+    background-color: rgb(10, 100, 100);
+    color: beige;
+    font-family: 'Montserrat';
+    padding: 10px;
+    text-decoration: none;
+    border-radius: 10px;
+}
+
+.leader-profile-remove-member-btn{
+    background-color: rgb(150, 50, 50);
+    color: beige;
+    text-decoration: none;
+    font-family: 'Montserrat';
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.leader-profile-unassociated-member-name{
+    color: rgb(100, 100, 100);
+    text-decoration: none;
+    font-weight: 800;
+}
+
+.leader-profile-unassociated-member-name:hover{
+    text-decoration: underline;
+}
+
+#leader-profile-search-unassociated-members-input{
+    border-radius: 20px;
+    border: 1px solid rgb(100, 100, 100);
+    padding-left: 30px;
+    height: 30px;
+    width:70%;
+}
+
+#leader-profile-search-unassociated-members-input:focus{
+    outline: none;
+}
+
+.leader-profile-unassociated-members-lens-icon{
+    position: absolute;
+    margin-top: 7px;
+    margin-left: 10px;
+}
+
+.leader-profile-no-unassociated-members-notifier{
+    color: rgb(150, 150, 150);
+    font-family: 'Impact';
+    font-size: 30px;
+    transform: rotate(-45deg);
+    transform-origin: 100% 100%;
+    margin-right: 50px;
 }
