--- a/management/static/styles.css
+++ b/management/static/styles.css
@@ -2,6 +2,23 @@ html{
     scroll-behavior:smooth;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(90, 90, 90, 0.8);
+  box-shadow: inset 0 0 5px rgb(10, 40, 40);
+  border-radius: 10px;
+  transition: all ease 1s;
+}
+
 body{
     margin: 0px;
 }
@@ -25,6 +42,7 @@ body{
 
 .home-header-nav-link{
     margin-top: 20px;
+    font-family: 'Montserrat';
 }
 
 .home-link-to-page{
@@ -200,5 +218,86 @@ body{
     padding-left: 5px;
     padding-right: 5px;
     font-family: 'Montserrat';
+}
+
+#notification-toggle{
+    cursor: pointer;
+}
+
+.notification-counter{
+    position: absolute;
+    background-color: rgb(150, 20, 20);
+    font-size: 8px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-radius: 50%;
+    margin-left: 118px;
+    margin-top: -4px;
+}
+
+.notification-list{
+    position: absolute;
+    background-color: rgba(40, 100, 100, 0.2);
+    height: 300px;
+    width: 400px;
+    border-radius: 10px;
+    border: 1px solid rgb(40, 100, 100);
+    overflow-y: scroll;
+    margin-left: 150px;
+    margin-top: -20px;
+    visibility: hidden;
+}
+
+.notification-list-show{
+    visibility: visible;
+    z-index: 1000000;
+}
+
+.notification{
+    margin: auto;
+    width: 95%;
+    margin-top: 5px;
+    min-height: 20px;
+    background-color: rgb(40, 80, 80);
+    padding-left: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius:10px;
+    border: 1px solid rgb(150, 150, 150);
+}
+
+.notification-title{
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+
+.notification-date-time{
+    margin-bottom: 10px;
+    font-size: 10px;
+}
+
+.notification-message{
+    font-size: 12px;
+}
+
+.notification-delete{
+    color: beige;
+    text-decoration: none;
+    font-size: 12px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.notification-empty-notifier{
+    font-weight: 800;
+    text-transform: uppercase;
+    font-family: Impact;
+    text-align: center;
+    margin-top: 100px;
+    font-size: 30px;
+    color: rgb(100, 100, 100);
+    letter-spacing: 2px;
 }
 
